--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+<title> First lesson</title>
+</head>
+<body>
+ <h1> <big> <b> introduction about me!</b></big></h1>
+ <hr>
+</body>
+
+<p>Hello! I'm a medicine student residing in Hampshire, passionate about both the complexities of the human body and the beautiful game of football. When I'm not buried in textbooks or attending lectures, you'll likely find me on the pitch, kicking a ball around, or in front of the TV, engrossed in a thrilling match. Balancing the rigor of medical studies with the joy of football keeps me grounded and energized, fostering a well-rounded approach to both my academic and leisure pursuits.
+</p>
+
+<a href="https://www.arsenal.com">
+<img src="images/image.JPG"300" width="700" alt="road to glory">
+
+</a>
+
+
+
+
+
+
+</html>
